# ivygfx

./: CMakeLists.txt  README
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  command.cpp  command.hpp  device.cpp  device.hpp  ive_device.cpp  ive_device.hpp  ive_pipeline.cpp  ive_pipeline.hpp  ive_window.cpp  ive_window.hpp  physical_device.cpp  physical_device.hpp  queue.hpp  swapchain_chk.hpp  validation.hpp
src/device/: CMakeLists.txt  autodevice.cpp  autodevice.hpp  command.cpp  command.hpp  debug_messenger.cpp  debug_messenger.hpp  framebuffer.cpp  framebuffer.hpp  instance.cpp  instance.hpp  ive_window.cpp  ive_window.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  queue.cpp  queue.hpp  renderpass.cpp  renderpass.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  swapchain_chk.hpp  validation.cpp  window.cpp  window.hpp
test/: CMakeLists.txt  test_autodevice.cpp  test_command.cpp  test_debug_messenger.cpp  test_device.cpp  test_devices.cpp  test_draw.cpp  test_framebuffer.cpp  test_glfw_init.cpp  test_init.cpp  test_physical_device.cpp  test_pipeline.cpp  test_renderpass.cpp  test_surface.cpp  test_swapchain.cpp  test_test.cpp  test_window.cpp  test_window_init.cpp
